<resources>
    <string name="app_name">Shoe Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="lets_start">Let\'s Start!</string>
    <string name="welcome_msg">Let\'s begin our shoe journey!</string>
    <string name="on_boarding_msg">Next, you will be able to navigate through your store collection and add a new shoe item if you wish!</string>
    <string name="on_boarding_title">Welcome on board!</string>
    <string name="go_to_store">Go to the store</string>
    <string name="logout">Logout</string>
    <string name="add_shoe">Add a new shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_preview">Shoe preview</string>
    <string name="login_screen_image">Login screen image</string>
    <string name="welcome_image">Welcome image</string>
    <string name="on_boarding_image">On boarding image</string>
</resources>
