<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/login_dest">
    <fragment
        android:id="@+id/login_dest"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_login_dest_to_welcomeFragment"
            app:destination="@id/welcome_dest"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/welcome_dest"
        android:name="com.udacity.shoestore.screens.on_boarding.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/welcome_fragment">
        <action
            android:id="@+id/action_welcome_dest_to_on_boarding_dest"
            app:destination="@id/on_boarding_dest"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/on_boarding_dest"
        android:name="com.udacity.shoestore.screens.on_boarding.OnBoardingFragment"
        android:label="@string/on_boarding_title"
        tools:layout="@layout/on_boarding_fragment">
        <action
            android:id="@+id/action_on_boarding_dest_to_shoeFragment"
            app:destination="@id/shoe_dest"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpTo="@id/login_dest"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoe_dest"
        android:name="com.udacity.shoestore.screens.shoe.ShoeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/shoe_fragment">
        <action
            android:id="@+id/action_shoeFragment_to_shoeDetailFragment"
            app:destination="@id/shoe_detail_dest"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_shoe_dest_to_mainActivity"
            app:destination="@id/main_activity_dest"
            app:launchSingleTop="false" />
    </fragment>
    <fragment
        android:id="@+id/shoe_detail_dest"
        android:name="com.udacity.shoestore.screens.shoe.ShoeDetailFragment"
        android:label="@string/add_shoe"
        tools:layout="@layout/shoe_detail_fragment" />
    <activity
        android:id="@+id/main_activity_dest"
        android:name="com.udacity.shoestore.MainActivity"
        android:label="MainActivity" />
</navigation>