<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.screens.shoe.ShoeDetailFragment">

    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.screens.shoe.ShoeViewModel" />
    </data>

    <!-- This is a great example of the benefits of a ConstraintLayout! The design is achieved in minimal time and everything is well aligned and constrained! -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add_shoe"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/company_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/size_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text" />

        <TextView
            android:id="@+id/size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/desc_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_text" />

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_text" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/confirm_button" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:text="@={shoeViewModel.newShoe.name}"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Name" />

        <EditText
            android:id="@+id/company_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:text="@={shoeViewModel.newShoe.company}"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Nike" />

        <EditText
            android:id="@+id/size_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:text="@={`` + shoeViewModel.newShoe.size}"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="45.5" />

        <EditText
            android:id="@+id/desc_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:text="@={shoeViewModel.newShoe.description}"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/desc_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Comfortable shoe with..." />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>