<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.navigation.OnBoardingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boarding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/boarding_image"
            android:layout_width="245dp"
            android:layout_height="185dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            app:srcCompat="@drawable/ic_baseline_directions_boat_24" />

        <TextView
            android:id="@+id/boarding_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/on_boarding_title"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boarding_image" />

        <Button
            android:id="@+id/go_to_shoe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/go_to_store"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boarding_sub_text" />

        <TextView
            android:id="@+id/boarding_sub_text"
            android:layout_width="335dp"
            android:layout_height="33dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="32dp"
            android:text="@string/on_boarding_msg"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boarding_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>